# adventofcode-2023

./: .envrc  .gitignore  BUILD.bazel  LICENSE  README  WORKSPACE  flake.nix  go.mod  go.sum  main.go
.devcontainer/: Dockerfile  devcontainer.json
cmd/: BUILD.bazel  dayCommands.go  dayFour.go  dayTemplate.go  dayThree.go  dayTwo.go  newDay.go  registry.go  root.go
cmd/coordinates/: main.go
cmd/dayEight/: main.go
cmd/dayEighteen/: main.go
cmd/dayEleven/: main.go
cmd/dayFifteen/: main.go
cmd/dayFive/: main.go
cmd/dayFour/: main.go
cmd/dayFourteen/: main.go
cmd/dayNine/: main.go
cmd/dayNineteen/: main.go  partTwo.go
cmd/daySeven/: main.go
cmd/daySeventeen/: cell_heap.go  main.go
cmd/daySix/: main.go
cmd/daySixteen/: main.go
cmd/dayTemplate/: main.go
cmd/dayTen/: main.go
cmd/dayThirteen/: main.go
cmd/dayThree/: main.go
cmd/dayTwelve/: main.go
cmd/dayTwenty/: main.go  parse.go
cmd/dayTwentyFive/: main.go
cmd/dayTwentyFour/: main.go
cmd/dayTwentyOne/: main.go
cmd/dayTwentyThree/: heap.go  main.go
cmd/dayTwentyTwo/: main.go
cmd/dayTwo/: main.go  simplest.input
cmd/fileReader/: main.go
cmd/scanner/: main.go
cmd/util/: main.go
